--- a/src/main/resources/page-section-option.html
+++ b/src/main/resources/page-section-option.html
@@ -1,6 +1,7 @@
 <div class="option">
     <span class="package">${packageName}.</span><span class="reference">${className}.${constantName}</span>
-
-    <a href="javascript:void(0)" class="class-link copy" onclick="copyClassName(this)"></a>
-    <a href="${url}" class="class-link url" target="_blank"></a>
+    <span class="undividable">
+        <a href="javascript:void(0)" class="class-link copy" onclick="copyClassName(this)"></a>
+        <a href="${url}" class="class-link url" target="_blank"></a>
+    </span>
 </div>
