--- a/src/main/resources/page.html
+++ b/src/main/resources/page.html
@@ -124,8 +124,8 @@
                 border-radius: 0.3rem;
             }
             .constant {
-                margin: 0.5rem 0;
-                padding: 0.5rem 0.8rem;
+                margin: 0.5rem -0.5rem 0 0;
+                padding: 0.5rem 0.5rem;
                 float: none;
                 clear: both;
                 overflow: auto;
@@ -188,6 +188,9 @@
             }
             .search-hidden {
                 display: none;
+            }
+            .undividable {
+                display: inline-block;
             }
             ::placeholder {
                 color: #cecece;
