--- a/src/main/resources/page-section-option.html
+++ b/src/main/resources/page-section-option.html
@@ -1,6 +1,6 @@
 <div class="option">
-    <span class="package">${packageName}.</span><span class="reference">${className}.${constantName}</span>
-    <span class="undividable">
+    <span class="package">${packageName}.</span><span class="className">${className}</span>.<span class="fieldName">${constantName}</span>
+    <span class="buttons">
         <a href="javascript:void(0)" class="class-link copy" onclick="copyClassName(this)"></a>
         <a href="${url}" class="class-link url" target="_blank"></a>
     </span>
