--- a/src/main/resources/page.html
+++ b/src/main/resources/page.html
@@ -6,9 +6,17 @@
         <script>
             function copyClassName(element) {
                 const option = element.closest('.option');
-                const ref = option.querySelector('.reference');
-                const refValue = ref ? ref.textContent : '';
+                const className = option.querySelector('.className').textContent || '';
+                const fieldName = option.querySelector('.fieldName').textContent || '';
+                const refValue = className + '.' + fieldName;
                 navigator.clipboard.writeText(refValue).then(() => alert('The following value copied to clipboard:\n\n' + refValue));
+            }
+            function clearSearch() {
+                document.getElementById('clear').classList.add('hidden');
+                setTimeout(() => {
+                    document.getElementById('search').value = '';
+                    document.querySelectorAll('.hidden:not(#clear)').forEach(elt => elt.classList.remove('hidden'));
+                }, 0);
             }
             function debounce(func, timeout = 300){
                 let timer;
@@ -20,17 +28,18 @@
             const processFilter = debounce(() => {
                 const searchable = (document.getElementById('search').value || '').trim().toLowerCase();
                 if (!searchable) {
-                    document.querySelectorAll('.search-hidden').forEach(elt => elt.classList.remove('search-hidden'));
+                    clearSearch();
                     return;
                 }
                 const selector = /^\*.+/.test(searchable)
                     ? '[data-val*="' + searchable.substring(1) + '"]'
                     : '[data-val^="' + searchable + '"]';
-                document.querySelectorAll('.section,.constant').forEach(elt => elt.classList.add('search-hidden'));
+                document.querySelectorAll('.section,.constant').forEach(elt => elt.classList.add('hidden'));
                 document.querySelectorAll(selector).forEach(elt => {
-                    elt.classList.remove('search-hidden');
-                    elt.closest('.section').classList.remove('search-hidden');
+                    elt.classList.remove('hidden');
+                    elt.closest('.section').classList.remove('hidden');
                 });
+                document.getElementById('clear').classList.remove('hidden');
             });
 
         </script>
@@ -50,6 +59,7 @@
                 margin: 1rem auto;
             }
             .searchbox {
+                position: relative;
                 padding: 1.5rem 1.5rem 0.3rem 1.5rem;
                 border-radius: 0.5rem;
                 background-color: #93D6F2;
@@ -83,6 +93,13 @@
                 font-size: .6em;
                 text-align: center;
                 margin-top: 0.2rem;
+            }
+            .clear-btn {
+                position: absolute;
+                top: 1.7rem;
+                right: 2rem;
+                cursor: pointer;
+                color: #cecece;
             }
             .index {
                 margin: 1rem auto;
@@ -140,8 +157,7 @@
             }
             .constant .value {
                 float: left;
-                width: 120px;
-                padding-right: 1.5rem;
+                padding: 0.2rem 1rem 0.2rem 0.4rem;
                 color: #888;
                 font-weight: bold;
                 overflow-wrap: break-word;
@@ -161,8 +177,16 @@
                 overflow: hidden;
                 line-height: 1.5rem;
             }
+            .option {
+                position: relative;
+                padding-right: 3rem;
+            }
             .option span {
                 overflow-wrap: break-word;
+            }
+            .option .fieldName {
+                display: inline-block;
+                overflow-wrap: normal;
             }
             .option .package {
                 color: #888;
@@ -191,11 +215,14 @@
             .class-link.copy:hover {
                 background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512' width='12' height='12'><path fill='%2393D6F2' d='M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z'></path></svg>");
             }
-            .search-hidden {
+            .hidden {
                 display: none;
             }
-            .undividable {
-                display: inline-block;
+            .buttons {
+                position: absolute;
+                display: block;
+                top: 0.05rem;
+                right: 0;
             }
             ::placeholder {
                 color: #cecece;
@@ -223,7 +250,7 @@
             }
             @media (min-width:1200px) {
                 .header,.body { width: 1100px;}
-                .constant .value { width: 280px; }
+                .constant .value { width: 260px; }
                 .body-placeholder { height: 8rem; }
                 .caption a:before { height: 10.5rem; margin-top: -10.5rem; }
             }
@@ -238,6 +265,7 @@
                     <div>
                         <input type="text" id="search" placeholder="e.g.: jcr:content" onkeyup="processFilter()">
                         <span class="note">Type to see values that <b><i>begin with</i></b> the given text. Start with <b>*</b> to see values that <b><i>contain</i></b> the text</span>
+                        <span id="clear" class="clear-btn hidden" onclick="clearSearch()">&#x2716;</span>
                     </div>
                 </div>
                 <div class="index">
